--- a/paginas/quiz.html
+++ b/paginas/quiz.html
@@ -15,10 +15,9 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Quiz</a></li>
-                    <li><a href="#">Videoaulas</a></li>
-                    <li><a href="#">Contato</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../paginas/quiz.html">Quiz</a></li>
+                <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
                 </ul>
             </nav>
         </div>
