--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Quiz</a></li>
-                    <li><a href="#">Videoaulas</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../paginas/quiz.html">Quiz</a></li>
+                <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
                 </ul>
             </nav>
         </div>
@@ -46,13 +46,13 @@
                 mensagem, e é sempre bom ter uma resposta para saber se tudo
                 ficou claro 
         </p>
-        <img src="imagens/icone2.jpg" class="icon1">
+        <img src="../PI-1---Grupo-5/imagens/icone2.jpg" class="icon1">
     
     </div>
 
     <div class="card2">
 
-            <img src="imagens/megaazul.jpg"  class="icon2">
+            <img src="../PI-1---Grupo-5/imagens/megaazul.jpg"  class="icon2">
 
             <p class="description2">
                 A comunicação entre jovens tem um estilo único, cheio de gírias,
@@ -95,8 +95,8 @@
                 <p>Busca ser clara e objetiva, com um vocabulário acessível para transmitir informações.</p>
             </div>
         </div>
-        <button id="prev"><img src="imagens/botãoe.png" alt="Previous" /></button>
-        <button id="next"><img src="imagens/botãod.png" alt="Next" /></button>
+        <button id="prev"><img src="../PI-1---Grupo-5/imagens/botãoe.png" alt="Previous" /></button>
+        <button id="next"><img src="../PI-1---Grupo-5/imagens/botãod.png" alt="Next" /></button>
     </section>
 
     <section class="vocesabeescrever">
@@ -117,7 +117,7 @@
                 mensagem fica clara e você se expressa do melhor jeito possível.
                 </p>
             </div>
-            <img src="imagens/iconehomem.png" alt="homem" class="homem">
+            <img src="../PI-1---Grupo-5/imagens/iconehomem.png" alt="homem" class="homem">
           </div>
     </section>
     <section class="impacto">
@@ -147,11 +147,11 @@
         <button class="botaoquiz">Começar</button>
     </div>
     
-       <script src="pi.js"></script>
+       <script src="../PI-1---Grupo-5/js/carrossel.js"></script>
 </body>
 <footer class="rodapé">
     <div class="logo">
-        <img src="imagens/logo.png" alt="logo">
+        <img src="../PI-1---Grupo-5/imagens/logo.png" alt="logo">
     </div>
     <div class="texto">
         <p class="menu">
@@ -165,12 +165,12 @@
     </div>
     <div class="contato">
         <div class="social">
-            <div><img src="imagens/github.jpg" alt="git"></div>
-            <div><img src="imagens/email.png" alt="gmail"></div>
-            <div><img src="imagens/insta.png" alt="insta" ></div>
+            <div><img src="../PI-1---Grupo-5/imagens/github.jpg" alt="git"></div>
+            <div><img src="../PI-1---Grupo-5/imagens/email.png" alt="gmail"></div>
+            <div><img src="../PI-1---Grupo-5/imagens/insta.png" alt="insta" ></div>
         </div>
 <!-- depois tem que colocar os links pro git, email e insta -->
-        <img src="imagens/logo.if.jpg" alt="Instituto Federal Catarinense - Campus Concórdia" class="logoifc">
+        <img src="../PI-1---Grupo-5/imagens/logo.if.jpg" alt="Instituto Federal Catarinense - Campus Concórdia" class="logoifc">
     </div>
 </footer>
 </html>
