--- a/paginas/resultado.html
+++ b/paginas/resultado.html
@@ -16,9 +16,9 @@
         <div class="nav">
             <nav>
                 <ul>
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Quiz</a></li>
-                    <li><a href="#">Videoaulas</a></li>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../paginas/quiz.html">Quiz</a></li>
+                <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
                 </ul>
             </nav>
         </div>
@@ -39,9 +39,9 @@
         </div>
         <div class="texto">
             <p class="menu">
-                <a href="#inicio">Início</a>
-                <a href="#sobre">Quiz</a>
-                <a href="#equipe">Videoaulas</a>
+                <a href="../index.html">Início</a>
+                <a href="../paginas/quiz.html">Quiz</a>
+                <a href="../paginas/videoaulas.html">Videoaulas</a>
                 <p class="grupo">PI 1 - Grupo 5</p>
 <!-- depois tem que colocar os links pro git, email e insta -->
 
