--- a/paginas/resultado.html
+++ b/paginas/resultado.html
@@ -49,12 +49,19 @@
         </div>
         <div class="contato">
             <div class="social">
-                <div><img src="../imagens/logogit.png" alt="git"></div>
-                <div><img src="../imagens/image.png" alt="gmail"></div>
-                <div><img src="../imagens/insta.png" alt="insta" ></div>
+                <div><a href="https://github.com/brunadonati79/PI-1---Grupo-5" target="_blank">
+                        <img src="../imagens/logogit.png" alt="git"></a></div>
+
+                <div><a href="https://mail.google.com/mail/u/5/?ogbl#inbox" target="_blank">
+                        <img src="../imagens/gmail.png" alt="gmail"></a></div>
+
+                <div><a href="https://instagram.com" target="_blank">
+                        <img src="../imagens/insta.png" alt="insta"></a></div>
             </div>
-<!-- depois tem que colocar os links pro git, email e insta -->
-            <img src="../imagens/logoifc.png" alt="Instituto Federal Catarinense - Campus Concórdia" class="logoifc">
+            <a href="https://ifc.edu.br/" target="_blank">
+                <img src="../imagens/logoifc.png" alt="Instituto Federal Catarinense - Campus Concórdia"
+                    class="logoifc">
+            </a>
         </div>
     </footer>
 
