--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap" rel="stylesheet">
-    <link href="../PI-1---Grupo-5/css/styleprincipal.css" rel="stylesheet" type="text/css">
+    <link href="css/styleprincipal.css" rel="stylesheet" type="text/css">
     <title>Gramaticando</title>
 </head>
 
@@ -20,9 +20,9 @@
             <div class="nav">
                 <nav>
                     <ul>
-                        <li><a href="../index.html">Início</a></li>
-                        <li><a href="../paginas/quiz.html">Quiz</a></li>
-                        <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="paginas/quiz.html">Quiz</a></li>
+                        <li><a href="paginas/videoaulas.html">Videoaulas</a></li>
                     </ul>
                 </nav>
             </div>
@@ -47,13 +47,13 @@
                 mensagem, e é sempre bom ter uma resposta para saber se tudo
                 ficou claro.
             </p>
-            <img src="../PI-1---Grupo-5/imagens/icone2.jpg" class="icon1">
+            <img src="imagens/icone2.jpg" class="icon1">
 
         </div>
 
         <div class="card2">
 
-            <img src="../PI-1---Grupo-5/imagens/megaazul.jpg" class="icon2">
+            <img src="imagens/megaazul.jpg" class="icon2">
 
             <p class="description2">
                 A comunicação entre jovens tem um estilo único, cheio de gírias,
@@ -97,8 +97,8 @@
             </div>
         </div>
         <script src="js/carrossel.js"></script>
-        <button id="prev"><img src="../PI-1---Grupo-5/imagens/botãoe.png" alt="Previous" /></button>
-        <button id="next"><img src="../PI-1---Grupo-5/imagens/botãod.png" alt="Next" /></button>
+        <button id="prev"><img src="imagens/botãoe.png" alt="Previous" /></button>
+        <button id="next"><img src="imagens/botãod.png" alt="Next" /></button>
     </section>
 
     <section class="vocesabeescrever">
@@ -119,7 +119,7 @@
                     mensagem fica clara e você se expressa do melhor jeito possível.
                 </p>
             </div>
-            <img src="../PI-1---Grupo-5/imagens/iconehomem.png" alt="homem" class="homem">
+            <img src="imagens/iconehomem.png" alt="homem" class="homem">
         </div>
     </section>
     <section class="impacto">
@@ -149,10 +149,10 @@
         <button class="botaoquiz">Começar</button>
     </div>
 
-    <script src="../PI-1---Grupo-5/js/carrossel.js"></script>
+    <script src="js/carrossel.js"></script>
     <footer class="rodapé">
         <div class="logo">
-            <img src="../PI-1---Grupo-5/imagens/logo.png" alt="logo">
+            <img src="imagens/logo.png" alt="logo">
         </div>
         <div class="texto">
             <p class="menu">
@@ -166,13 +166,19 @@
         </div>
         <div class="contato">
             <div class="social">
-                <div><img src="../PI-1---Grupo-5/imagens/github.jpg" alt="git"></div>
-                <div><img src="../PI-1---Grupo-5/imagens/email.png" alt="gmail"></div>
-                <div><img src="../PI-1---Grupo-5/imagens/insta.png" alt="insta"></div>
+                <div><a href="https://github.com/brunadonati79/PI-1---Grupo-5" target="_blank">
+                        <img src="imagens/logogit.png" alt="git"></a></div>
+
+                <div><a href="https://mail.google.com/mail/u/5/?ogbl#inbox" target="_blank">
+                        <img src="imagens/gmail.png" alt="gmail"></a></div>
+
+                <div><a href="https://instagram.com" target="_blank">
+                        <img src="imagens/insta.png" alt="insta"></a></div>
             </div>
-            <!-- depois tem que colocar os links pro git, email e insta -->
-            <img src="../PI-1---Grupo-5/imagens/logo.if.jpg" alt="Instituto Federal Catarinense - Campus Concórdia"
-                class="logoifc">
+            <a href="https://ifc.edu.br/" target="_blank">
+                <img src="imagens/logoifc.png" alt="Instituto Federal Catarinense - Campus Concórdia"
+                    class="logoifc">
+            </a>
         </div>
     </footer>
 </body>
