--- a/paginas/quiz.html
+++ b/paginas/quiz.html
@@ -6,18 +6,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100..900&display=swap" rel="stylesheet">
+    <link href="../css/stylequiz.css" rel="stylesheet" type="text/css">
     <title>Quiz</title>
-    <link rel="stylesheet" href="../css/stylequiz.css">
 </head>
 <body>
     <header class="header">
-        <img src="../imagens/logoheader.png">
+        <img src="../imagens/logo.png">
         <div class="nav">
             <nav>
                 <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="../paginas/quiz.html">Quiz</a></li>
-                <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="videoaulas.html">Videoaulas</a></li>
                 </ul>
             </nav>
         </div>
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <script src="quiz2.js"></script>
+    <script src="../js/quiz.js"></script>
 
     <footer class="rodapé">
         <div class="logo">
@@ -83,9 +83,9 @@
         </div>
         <div class="texto">
             <p class="menu">
-                <a href="#inicio">Início</a>
-                <a href="#sobre">Quiz</a>
-                <a href="#equipe">Videoaulas</a>
+                <a href="../index.html">Início</a>
+                <a href="quiz.html">Quiz</a>
+                <a href="videoaulas.html">Videoaulas</a>
                 <p class="grupo">PI 1 - Grupo 5</p>
 <!-- depois tem que colocar os links pro git, email e insta -->
 
@@ -93,12 +93,19 @@
         </div>
         <div class="contato">
             <div class="social">
-                <div><img src="../imagens/logogit.png" alt="git"></div>
-                <div><img src="../imagens/image.png" alt="gmail"></div>
-                <div><img src="../imagens/insta.png" alt="insta" ></div>
+                <div><a href="https://github.com/brunadonati79/PI-1---Grupo-5" target="_blank">
+                        <img src="../imagens/logogit.png" alt="git"></a></div>
+
+                <div><a href="https://mail.google.com/mail/u/5/?ogbl#inbox" target="_blank">
+                        <img src="../imagens/gmail.png" alt="gmail"></a></div>
+
+                <div><a href="https://instagram.com" target="_blank">
+                        <img src="../imagens/insta.png" alt="insta"></a></div>
             </div>
-<!-- depois tem que colocar os links pro git, email e insta -->
-            <img src="../imagens/logoifc.png" alt="Instituto Federal Catarinense - Campus Concórdia" class="logoifc">
+            <a href="https://ifc.edu.br/" target="_blank">
+                <img src="../imagens/logoifc.png" alt="Instituto Federal Catarinense - Campus Concórdia"
+                    class="logoifc">
+            </a>
         </div>
     </footer>
 
