pronto agora. Yepie

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
             </div>
             <div class="apresentação1">
-                <p> Aprenda o melhor jeito de se <span class="palavrafundoazul">comunicar</span></p>
+                <p> Aprenda o melhor jeito de <span class="palavrafundoazul">escrever</span></p>
         </header>
     </section>
 
