--- a/paginas/resultado.html
+++ b/paginas/resultado.html
@@ -17,8 +17,8 @@
             <nav>
                 <ul>
                 <li><a href="../index.html">Início</a></li>
-                <li><a href="../paginas/quiz.html">Quiz</a></li>
-                <li><a href="../paginas/videoaulas.html">Videoaulas</a></li>
+                <li><a href="paginas/quiz.html">Quiz</a></li>
+                <li><a href="videoaulas.html">Videoaulas</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,17 +31,17 @@
         <button class="btn" onclick="window.location.href='quiz2.html'">Voltar</button>
         <button class="btn" onclick="window.location.href='videos.html'">Seguinte</button>
     </div>
-    <script src="resultado.js"></script>
+    <script src="../js/resultados.js"></script>
 
     <footer class="rodapé">
         <div class="logo">
-            <img src="imagens/logo.png" alt="logo">
+            <img src="../imagens/logo.png" alt="logo">
         </div>
         <div class="texto">
             <p class="menu">
-                <a href="../index.html">Início</a>
-                <a href="../paginas/quiz.html">Quiz</a>
-                <a href="../paginas/videoaulas.html">Videoaulas</a>
+                <a href="index.html">Início</a>
+                <a href="quiz.html">Quiz</a>
+                <a href="videoaulas.html">Videoaulas</a>
                 <p class="grupo">PI 1 - Grupo 5</p>
 <!-- depois tem que colocar os links pro git, email e insta -->
 
