--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <h1>Quiz</h1>
         <p>Teste seus conhecimentos de língua portuguesa e descubra o quanto
             você domina de nossa gramática!</p>
-        <button class="botaoquiz">Começar</button>
+        <button class="botaoquiz"><a href="paginas/quiz.html">Começar</a></button>
     </div>
 
     <script src="js/carrossel.js"></script>
@@ -157,8 +157,8 @@
         <div class="texto">
             <p class="menu">
                 <a href="#inicio">Início</a>
-                <a href="#sobre">Quiz</a>
-                <a href="#equipe">Videoaulas</a>
+                <a href="paginas/quiz.html">Quiz</a>
+                <a href="paginas/videoaulaPI.html">Videoaulas</a>
             <p class="grupo">PI 1 - Grupo 5</p>
             <!-- depois tem que colocar os links pro git, email e insta -->
 
